--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "live-server public/",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
   "author": "Erick Smith",
   "license": "MIT",
@@ -20,7 +20,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "validator": "^8.0.0",
-    "webpack": "^4.4.1"
+    "webpack": "^3.1.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "devDependencies": {
     "webpack-cli": "^2.0.13"
